[metadata]
name = asyncio-atexit
version = attr: asyncio_atexit.__version__
description = Like atexit, but for asyncio
long_description = file: README.md
long_description_content_type = text/markdown
author = Min RK
author_email = benjaminrk@gmail.com
url = https://github.com/minrk/asyncio-atexit
keywords = asyncio
license = MIT License
classifiers =
    Framework :: AsyncIO
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
py_modules = asyncio_atexit
python_requires = >=3.6

[options.extras_require]
test = pytest

[tool:pytest]
# asyncio_mode = auto
